--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "@ant-design/icons": "^4.7.0",
     "antd": "^4.18.4",
     "cra-template": "1.1.3",
+    "mobx": "^6.3.13",
+    "mobx-react-lite": "^3.2.3",
     "react": "^17.0.2",
     "react-dnd": "^14.0.5",
     "react-dnd-html5-backend": "^14.1.0",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
     "styled-components": "^5.3.3"
   },
   "scripts": {
