--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "mobx": "^6.3.13",
     "mobx-react-lite": "^3.2.3",
     "react": "^17.0.2",
+    "react-color": "^2.19.3",
     "react-dnd": "^14.0.5",
     "react-dnd-html5-backend": "^14.1.0",
     "react-dom": "^17.0.2",
