--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@ant-design/icons": "^4.7.0",
     "antd": "^4.18.4",
     "cra-template": "1.1.3",
+    "intro.js-react": "^0.6.0",
     "lodash": "^4.17.21",
     "mobx": "^6.3.13",
     "mobx-react-lite": "^3.2.3",
