--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "antd": "^4.18.4",
+    "axios": "^0.26.1",
     "cra-template": "1.1.3",
     "intro.js-react": "^0.6.0",
     "lodash": "^4.17.21",
@@ -47,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "http-proxy-middleware": "^2.0.4"
   }
 }
